Finished about section and add animation for image in hero section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <a href="#" class="header-nav__button">Get stated</a>
         </nav>
     </header>
+
     <section class="hero">
         <div class="hero__content">
             <h1 class="hero__title">Better digital experience with Ninestars</h1>
@@ -37,6 +38,30 @@
         </div>
         <div class="hero__image">
             <img src="./undraw_Gifts_re_97j6 (1).svg" alt="">
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="about__image">
+            <img src="./undraw_Decide_re_ixfw.svg" alt="">
+        </div>
+        <div class="about__content">
+            <div class="about__header">
+                <h3 class="about__title">Voluptatem dignissimos provident quasi</h3>
+                <p class="about__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi fugit, molestias mollitia quaerat nam autem, nisi enim repellat officiis pariatur fuga rem libero ullam sed eius quibusdam eum? Ullam, provident?</p>
+            </div>
+            <div class="about__items">
+                <div class="about__item">
+                    <i class="far fa-file-alt about__icon"></i>
+                    <h4 class="about-item__title">Corporis voluptates sit</h4>
+                    <p class="about__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis molliti</p>
+                </div>
+                <div class="about__item">
+                    <i class="fab fa-affiliatetheme about__icon"></i>
+                    <h4 class="about-item__title">Corporis voluptates sit</h4>
+                    <p class="about__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis molliti</p>
+                </div>
+            </div>
         </div>
     </section>
 </body>
