Finished portfolio section and services section

--- a/index.html
+++ b/index.html
@@ -64,5 +64,210 @@
             </div>
         </div>
     </section>
+
+    <section class="services">
+        <div class="services__header">
+            <h2 class="services__title">Services</h2>
+            <p class="services__desc">Check out the great services we offer</p>
+        </div>
+        <div class="services__tags">
+            <div class="services__tag">
+                <i class="fas fa-archway services__icon"></i>
+                <h4 class="services__tag-name">Lorem Ipsum</h4>
+                <p class="services__tag-content">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
+            </div>
+            <div class="services__tag">
+                <i class="fas fa-archway services__icon"></i>
+                <h4 class="services__tag-name">Lorem Ipsum</h4>
+                <p class="services__tag-content">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
+            </div>
+            <div class="services__tag">
+                <i class="fas fa-archway services__icon"></i>
+                <h4 class="services__tag-name">Lorem Ipsum</h4>
+                <p class="services__tag-content">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
+            </div>
+            <div class="services__tag">
+                <i class="fas fa-archway services__icon"></i>
+                <h4 class="services__tag-name">Lorem Ipsum</h4>
+                <p class="services__tag-content">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="portfolio__header">
+            <h2 class="portfolio__title">Portfolio</h2>
+            <p class="portfolio__desc">Check out our beautifull portfolio</p>
+        </div>
+        <ul class="portfolio__filter">
+           <li class="portfolio-filter__item">
+               <a href="#">All</a>
+            </li>
+           <li class="portfolio-filter__item">
+               <a href="#">App</a>
+            </li>
+           <li class="portfolio-filter__item">
+               <a href="#">Car</a>
+            </li>
+           <li class="portfolio-filter__item">
+               <a href="#">Web</a>
+            </li> 
+        </ul>
+        <div class="portfolio__items">
+            <div class="portfolio__item">
+                <div class="portfolio__wrap">
+                    <div class="portfolio__icons">
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-plus"></i>
+                        </a>
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__info">
+                        <h4 class="portfolio-item__name">App 1</h4>
+                        <p class="portfolio-item__category">App</p>
+                    </div>
+                </div>
+                <img src="https://images.unsplash.com/photo-1506860076259-17466043319b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=401&q=80" alt="" class="portfolio__image">
+            </div>
+            <div class="portfolio__item">
+                <div class="portfolio__wrap">
+                    <div class="portfolio__icons">
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-plus"></i>
+                        </a>
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__info">
+                        <h4 class="portfolio-item__name">App 1</h4>
+                        <p class="portfolio-item__category">App</p>
+                    </div>
+                </div>
+                <img src="https://images.unsplash.com/photo-1501949997128-2fdb9f6428f1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=750&q=80" alt="" class="portfolio__image">
+            </div>
+            <div class="portfolio__item">
+                <div class="portfolio__wrap">
+                    <div class="portfolio__icons">
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-plus"></i>
+                        </a>
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__info">
+                        <h4 class="portfolio-item__name">App 1</h4>
+                        <p class="portfolio-item__category">App</p>
+                    </div>
+                </div>
+                <img src="https://images.unsplash.com/photo-1473163311424-8c01f39bf36d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="" class="portfolio__image">
+            </div>
+            <div class="portfolio__item">
+                <div class="portfolio__wrap">
+                    <div class="portfolio__icons">
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-plus"></i>
+                        </a>
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__info">
+                        <h4 class="portfolio-item__name">App 1</h4>
+                        <p class="portfolio-item__category">App</p>
+                    </div>
+                </div>
+                <img src="https://images.unsplash.com/photo-1500375592092-40eb2168fd21?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=334&q=80" alt="" class="portfolio__image">
+            </div>
+            <div class="portfolio__item">
+                <div class="portfolio__wrap">
+                    <div class="portfolio__icons">
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-plus"></i>
+                        </a>
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__info">
+                        <h4 class="portfolio-item__name">App 1</h4>
+                        <p class="portfolio-item__category">App</p>
+                    </div>
+                </div>
+                <img src="https://images.unsplash.com/photo-1495774539583-885e02cca8c2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="" class="portfolio__image">
+            </div>
+            <div class="portfolio__item">
+                <div class="portfolio__wrap">
+                    <div class="portfolio__icons">
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-plus"></i>
+                        </a>
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__info">
+                        <h4 class="portfolio-item__name">App 1</h4>
+                        <p class="portfolio-item__category">App</p>
+                    </div>
+                </div>
+                <img src="https://images.unsplash.com/photo-1437388914080-908608af1956?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80" alt="" class="portfolio__image">
+            </div>
+            <div class="portfolio__item">
+                <div class="portfolio__wrap">
+                    <div class="portfolio__icons">
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-plus"></i>
+                        </a>
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__info">
+                        <h4 class="portfolio-item__name">App 1</h4>
+                        <p class="portfolio-item__category">App</p>
+                    </div>
+                </div>
+                <img src="https://images.unsplash.com/photo-1458932955922-a397fae0b8d5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="" class="portfolio__image">
+            </div>
+            <div class="portfolio__item">
+                <div class="portfolio__wrap">
+                    <div class="portfolio__icons">
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-plus"></i>
+                        </a>
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__info">
+                        <h4 class="portfolio-item__name">App 1</h4>
+                        <p class="portfolio-item__category">App</p>
+                    </div>
+                </div>
+                <img src="https://images.unsplash.com/photo-1498951503634-5e29323b5b23?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" alt="" class="portfolio__image">
+            </div>
+            <div class="portfolio__item">
+                <div class="portfolio__wrap">
+                    <div class="portfolio__icons">
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-plus"></i>
+                        </a>
+                        <a href="#" class="portfolio__icon">
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </div>
+                    <div class="portfolio__info">
+                        <h4 class="portfolio-item__name">App 1</h4>
+                        <p class="portfolio-item__category">App</p>
+                    </div>
+                </div>
+                <img src="https://images.unsplash.com/photo-1484291470158-b8f8d608850d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="" class="portfolio__image">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
