Finished faq, team, clients section

--- a/index.html
+++ b/index.html
@@ -269,5 +269,226 @@
             </div>
         </div>
     </section>
+
+    <section class="questions">
+        <div class="questions__header">
+            <h2 class="questions__title">F.A.Q</h2>
+            <p class="questions__desc">Frequently Asked Questions</p>
+        </div>
+        <ul class="questions__list">
+            <li class="questions__item">
+                <h4 class="questions__question">
+                    <i class="fas fa-chevron-down questions__icon questions__icon--down"></i>
+                    <i class="fas fa-chevron-up questions__icon questions__icon--up"></i>
+                    Non consectetur a erat nam at lectus urna duis?
+                </h4>
+                <p class="questions__answer">
+                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                </p>
+            </li>
+            <li class="questions__item">
+                <h4 class="questions__question">
+                    <i class="fas fa-chevron-down questions__icon questions__icon--down"></i>
+                    <i class="fas fa-chevron-up questions__icon questions__icon--up"></i>
+                    Non consectetur a erat nam at lectus urna duis?
+                </h4>
+                <p class="questions__answer">
+                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                </p>
+            </li>
+            <li class="questions__item">
+                <h4 class="questions__question">
+                    <i class="fas fa-chevron-down questions__icon questions__icon--down"></i>
+                    <i class="fas fa-chevron-up questions__icon questions__icon--up"></i>
+                    Non consectetur a erat nam at lectus urna duis?
+                </h4>
+                <p class="questions__answer">
+                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                </p>
+            </li>
+            <li class="questions__item">
+                <h4 class="questions__question">
+                    <i class="fas fa-chevron-down questions__icon questions__icon--down"></i>
+                    <i class="fas fa-chevron-up questions__icon questions__icon--up"></i>
+                    Non consectetur a erat nam at lectus urna duis?
+                </h4>
+                <p class="questions__answer">
+                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                </p>
+            </li>
+            <li class="questions__item">
+                <h4 class="questions__question">
+                    <i class="fas fa-chevron-down questions__icon questions__icon--down"></i>
+                    <i class="fas fa-chevron-up questions__icon questions__icon--up"></i>
+                    Non consectetur a erat nam at lectus urna duis?
+                </h4>
+                <p class="questions__answer">
+                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                </p>
+            </li>
+            <li class="questions__item">
+                <h4 class="questions__question">
+                    <i class="fas fa-chevron-down questions__icon questions__icon--down"></i>
+                    <i class="fas fa-chevron-up questions__icon questions__icon--up"></i>
+                    Non consectetur a erat nam at lectus urna duis?
+                </h4>
+                <p class="questions__answer">
+                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                </p>
+            </li>
+        </ul>
+    </section>
+
+    <section class="team">
+        <div class="team__header">
+            <h2 class="team__title">Team</h2>
+            <p class="team__desc">Our team is always here to help</p>
+        </div>
+        <div class="team__members">
+            <div class="team__member">
+                <img src="https://images.unsplash.com/photo-1542909168-82c3e7fdca5c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="" class="team__image">
+                <div class="team__wrap">
+                    <ul class="team-member__socials">
+                        <i class="fab fa-twitter team-member__icon"></i>
+                        <i class="fab fa-facebook team-member__icon"></i>
+                        <i class="fab fa-instagram team-member__icon"></i>
+                        <i class="fab fa-linkedin team-member__icon"></i>
+                    </ul>
+                    <div class="team-member__info">
+                        <h4 class="team-member__name">Whalter White</h4>
+                        <span class="team-member__job">Chief executive officer</span>
+                    </div>
+                </div>
+            </div>
+            <div class="team__member">
+                <img src="https://images.unsplash.com/photo-1554151228-14d9def656e4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=333&q=80" alt="" class="team__image">
+                <div class="team__wrap">
+                    <ul class="team-member__socials">
+                        <i class="fab fa-twitter team-member__icon"></i>
+                        <i class="fab fa-facebook team-member__icon"></i>
+                        <i class="fab fa-instagram team-member__icon"></i>
+                        <i class="fab fa-linkedin team-member__icon"></i>
+                    </ul>
+                    <div class="team-member__info">
+                        <h4 class="team-member__name">Whalter White</h4>
+                        <span class="team-member__job">Chief executive officer</span>
+                    </div>
+                </div>
+            </div>
+            <div class="team__member">
+                <img src="https://images.unsplash.com/photo-1589571894960-20bbe2828d0a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=333&q=80" alt="" class="team__image">
+                <div class="team__wrap">
+                    <ul class="team-member__socials">
+                        <i class="fab fa-twitter team-member__icon"></i>
+                        <i class="fab fa-facebook team-member__icon"></i>
+                        <i class="fab fa-instagram team-member__icon"></i>
+                        <i class="fab fa-linkedin team-member__icon"></i>
+                    </ul>
+                    <div class="team-member__info">
+                        <h4 class="team-member__name">Whalter White</h4>
+                        <span class="team-member__job">Chief executive officer</span>
+                    </div>
+                </div>
+            </div>
+            <div class="team__member">
+                <img src="https://images.unsplash.com/photo-1544348817-5f2cf14b88c8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="" class="team__image">
+                <div class="team__wrap">
+                    <ul class="team-member__socials">
+                        <i class="fab fa-twitter team-member__icon"></i>
+                        <i class="fab fa-facebook team-member__icon"></i>
+                        <i class="fab fa-instagram team-member__icon"></i>
+                        <i class="fab fa-linkedin team-member__icon"></i>
+                    </ul>
+                    <div class="team-member__info">
+                        <h4 class="team-member__name">Whalter White</h4>
+                        <span class="team-member__job">Chief executive officer</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="clients">
+        <div class="clients__header">
+            <h2 class="clients__title">Clients</h2>
+            <p class="clients__desc">They trusted us</p>
+        </div>
+        <ul class="clients__slider">
+            <li class="clients__client">
+                <img src="./images/client-1.png" alt="">
+            </li>
+            <li class="clients__client">
+                <img src="./images/client-2.png" alt="">
+            </li>
+            <li class="clients__client">
+                <img src="./images/client-3.png" alt="">
+            </li>
+            <li class="clients__client">
+                <img src="./images/client-4.png" alt="">
+            </li>
+            <li class="clients__client">
+                <img src="./images/client-5.png" alt="">
+            </li>
+            <li class="clients__client">
+                <img src="./images/client-6.png" alt="">
+            </li>
+            <li class="clients__client">
+                <img src="./images/client-7.png" alt="">
+            </li>
+            <li class="clients__client">
+                <img src="./images/client-8.png" alt="">
+            </li>
+        </ul>
+
+        <div class="clients__navigation">
+            <div class="clients__button">
+                <input type="radio" name="client" class="clients__input" id="client-1" checked>
+                <label for="client-1" class="clients__label"></label>
+            </div>
+            <div class="clients__button">
+                <input type="radio" name="client" class="clients__input" id="client-2">
+                <label for="client-2" class="clients__label"></label>
+            </div>
+            <div class="clients__button">
+                <input type="radio" name="client" class="clients__input" id="client-3">
+                <label for="client-3" class="clients__label"></label>
+            </div>
+            <div class="clients__button">
+                <input type="radio" name="client" class="clients__input" id="client-4">
+                <label for="client-4" class="clients__label"></label>
+            </div>
+            <div class="clients__button">
+                <input type="radio" name="client" class="clients__input" id="client-5">
+                <label for="client-5" class="clients__label"></label>
+            </div>
+            <div class="clients__button">
+                <input type="radio" name="client" class="clients__input" id="client-6">
+                <label for="client-6" class="clients__label"></label>
+            </div>
+            <div class="clients__button">
+                <input type="radio" name="client" class="clients__input" id="client-7">
+                <label for="client-7" class="clients__label"></label>
+            </div>
+            <div class="clients__button">
+                <input type="radio" name="client" class="clients__input" id="client-8">
+                <label for="client-8" class="clients__label"></label>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact">
+        <div class="contact__header">
+            <h2 class="contact__title">Contact us</h2>
+            <p class="contact__desc">Contact us the get started</p>
+        </div>
+        <div class="contact__info">
+
+        </div>
+        <div class="contact__message">
+
+        </div>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
